[package]
name = "web-proj"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-web = "4.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
dotenv = "0.15"
jsonwebtoken = "9.3"
bcrypt = "0.15"
chrono = "0.4"